# skills-for-triton-kernel

./: .gitignore  README.md  pyproject.toml  requirements.txt  skills.md
assets/: add_kernel_log.md  log_template.md  mha_kernel_log.md  softmax_kernel_log.md
docs/: triton_kernel_agent_skills_51004c70.plan.md
kernels/: __init__.py
kernels/add/: __init__.py  v1_baseline.py  v2_tiling.py  v3_coalesced.py  v4_optimized.py
kernels/mha/: __init__.py  v1_baseline.py  v2_tiling.py  v3_coalesced.py  v4_optimized.py
kernels/softmax/: __init__.py  v1_baseline.py  v2_tiling.py  v3_coalesced.py  v4_optimized.py
references/: phase1_research.md  phase2_kernel_generation.md  phase3_validation_benchmark.md  phase4_selection_logging.md
skills_for_triton_kernel/: __init__.py  cli.py
skills_for_triton_kernel/skills/torch-to-triton-kernel/: SKILL.md  examples.md
skills_for_triton_kernel/skills/torch-to-triton-kernel/references/: optimization_techniques.md  phase1_research.md  phase2_kernel_generation.md  phase3_validation_benchmark.md  phase4_selection_logging.md
tests/: test_benchmark.py  test_correctness.py
