[project]
name = "skills-for-triton-kernel"
version = "0.1.0"
description = "Torch-to-Triton Kernel Agent Skills - PyTorch operations를 Triton kernels로 변환"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "triton>=2.1.0",
    "numpy>=1.21.0",
    "pytest>=7.0.0",
]

[project.scripts]
skills-for-triton-kernel = "skills_for_triton_kernel.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skills_for_triton_kernel", "kernels", "tests"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
